k8s/ingressv1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polling
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - host: localhost
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
